--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import "tailwindcss";
+
+@theme {
+  --font-inter: "Inter", sans-serif; 
+}
 
 /* CSS resets */
 html, body, #root {
   height: 100%;
   width: 100%;
+  font-family: var(--font-inter);
 }
